After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757418 - StTextureCache: Fix a fallout from GTask port
StTextureCache: Fix a fallout from GTask port
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: st
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2015-10-31 23:55 UTC by Kalev Lember
Modified: 2015-11-01 10:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
StTextureCache: Fix a fallout from GTask port (866 bytes, patch)
2015-10-31 23:55 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2015-10-31 23:55:08 UTC
gnome-shell 3.19.1 in rawhide crashes when starting in gdm mode, https://bugzilla.redhat.com/show_bug.cgi?id=1276833

Looks like a fallout from GTask port; load_pixbuf_thread in st-texture-cache.c has an assert (data != NULL), but the task data that gets passed to the thread func isn't set.
Comment 1 Kalev Lember 2015-10-31 23:55:35 UTC
Created attachment 314567 [details] [review]
StTextureCache: Fix a fallout from GTask port

Set the task data that load_pixbuf_thread func expects.
Comment 2 Florian Müllner 2015-11-01 01:25:16 UTC
Review of attachment 314567 [details] [review]:

Ugh, sorry for that
Comment 3 Kalev Lember 2015-11-01 10:34:36 UTC
Thanks!

Attachment 314567 [details] pushed as df0b465 - StTextureCache: Fix a fallout from GTask port