StTextureCache: Fix a fallout from GTask port

Set the task data that load_pixbuf_thread func expects.

https://bugzilla.gnome.org/show_bug.cgi?id=757418